--- a/source/CSharpToday.Blazor.AzureB2C/CSharpToday.Blazor.AzureB2C.csproj
+++ b/source/CSharpToday.Blazor.AzureB2C/CSharpToday.Blazor.AzureB2C.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.1" />
+    <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="5.6.0" />
   </ItemGroup>
 
 </Project>
