--- a/source/CSharpToday.Blazor.AzureB2C.Test/CSharpToday.Blazor.AzureB2C.Test.csproj
+++ b/source/CSharpToday.Blazor.AzureB2C.Test/CSharpToday.Blazor.AzureB2C.Test.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="LucidCode" Version="0.3.7" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.0.0" />
     <PackageReference Include="MSTest.TestFramework" Version="2.0.0" />
