--- a/source/CSharpToday.Blazor.AzureB2C.Test/CSharpToday.Blazor.AzureB2C.Test.csproj
+++ b/source/CSharpToday.Blazor.AzureB2C.Test/CSharpToday.Blazor.AzureB2C.Test.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="LucidCode" Version="0.3.7" />
+    <PackageReference Include="LucidCode" Version="0.5.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.0.0" />
@@ -18,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CSharpToday.Blazor.AzureB2C.Http\CSharpToday.Blazor.AzureB2C.Http.csproj" />
     <ProjectReference Include="..\CSharpToday.Blazor.AzureB2C\CSharpToday.Blazor.AzureB2C.csproj" />
   </ItemGroup>
 
