--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,9 @@ pool:
   name: Default
 
 steps:
+- task: NuGetAuthenticate@1
+  inputs:
+    nuGetServiceConnections: 'NuGet-Blazor.AzureB2C'
 - script: powershell .\build.ps1
   env:
     FeedUser: $(FeedUser)
