--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,7 @@ steps:
 - task: NuGetAuthenticate@1
   inputs:
     nuGetServiceConnections: 'NuGet-Blazor.AzureB2C'
+    forceReinstallCredentialProvider: true
 - script: powershell .\build.ps1
   env:
     FeedUser: $(FeedUser)
